Fix another layout bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,7 +29,6 @@ body{
     color: white;
     overflow-x: hidden;
     position: relative;
-    min-height: 450px;
     font-size: 2rem;
 }
 
